--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Android sensitive files
+android/local.properties
+android/key.properties
+
 # Environment variables - API Keys and secrets
 .env
 .env.local
