--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   
   # Location & Maps
   google_maps_flutter: ^2.5.0
+  flutter_map: ^6.1.0          # OpenStreetMap support
+  latlong2: ^0.9.1             # Latitude/longitude utilities
   location: ^5.0.3
   geolocator: ^10.1.0
 
