--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   # Calendar & Timezone
   timezone: ^0.9.2
   device_calendar: ^4.3.3
+  
+  app_settings: ^5.1.1
+  device_info_plus: ^9.1.0
 
 dev_dependencies:
   flutter_test:
