--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   
   app_settings: ^5.1.1
   device_info_plus: ^9.1.0
+  
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
