--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # File operations & sharing
   share_plus: ^7.2.1
   path_provider: ^2.1.2
+  path: ^1.8.3
   file_picker: ^8.0.0+1
 
   # Network
